k8s/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
  labels:
    name: LoadBalancerController
spec:
  controller: eks.amazonaws.com/alb
