k8s/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-social-api
  labels:
    name: simple-social-api
    app: simple-social


spec:
  replicas: 2
  selector:
      matchLabels:
          app: simple-social
  template:
    metadata:
      name : simple-social-api
      labels:
        name: simple-social-api
        app: simple-social
    spec:
      containers:
        - name: simple-social-api
          image: docker.io/0142365870/simple-social-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
