k8s/mysql_statefulset.yaml
apiVersion: v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 3
  serviceName: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
              name: mysql
          livenessProbe:
              exec:
                command:
                  - sh
                  - -c
                  - mysqladmin ping -h
                  - ${POD_IP}
              initialDelaySeconds: 30
              periodSeconds: 5
              timeoutSeconds: 5
          readinessProbe:
              exec:
                command:
                  - sh
                  - -c
                  - mysqladmin ping -h
                  - ${POD_IP}
              initialDelaySeconds: 5
              periodSeconds: 5
              timeoutSeconds: 1
          volumeMounts:
            - name: db_data
              mountPath: /var/lib/mysql
  volumeClaimTemplates: 
    - metadata:
        name: db_data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
