k8s/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-social-api
  labels:
    name: simple-social-api-service
    app: simple-social
spec:
  selector:
    name: simple-social-api
    app: simple-social

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
