k8s/mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
    - name : mysql
      port: 3306
  clusterIP: None
  selector:
    app: mysql
