k8s/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: simple-social-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - http:
        paths: 
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: simple-social-web
                port:
                  number: 80
